--- a/index.html
+++ b/index.html
@@ -95,8 +95,16 @@
     <div class="projects">
       <div class="project">
         <h3>Site de Casamento</h3>
-        <p>Projeto de site de casamento completo, responsivo e informativo. Em breve link online.</p>
-        <a href="#">Ver Código</a>
+        <p>Criação de um site moderno e responsivo para loja de roupas femininas, com design atrativo e fácil navegação.
+O sistema deve incluir:
+Home com destaque para categorias de produtos.
+Página de produtos por categoria (vestidos, blusas, calçados, acessórios etc.).
+Sistema de login e registro de usuários.
+Área de perfil do cliente (com dados pessoais).
+Carrinho de compras integrado e funcional.
+Checkout simplificado com opções de pagamento.
+O foco é ter um layout elegante e intuitivo, voltado para o público feminino, que valorize as peças e proporcione uma boa experiência de compra.</p>
+        <a href="#">Ver Projeto</a>
       </div>
     </div>
   </section>
