--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <h2>Projetos</h2>
     <div class="projects">
       <div class="project">
-        <h3>Site Virtual Loja de roupas femininas</h3>
+        <h3>Site Virtual Loja de Roupas Femininas</h3>
         <p>Criação de um site moderno e responsivo para loja de roupas femininas, com design atrativo e fácil navegação.
 O sistema deve incluir:
 Home com destaque para categorias de produtos.
